tyk-docs/static/css/bespoke.css
/* ... */
.gform_footer {
  text-align: center;
}

.gform_validation_error .gform_heading {
  display: none;
}

.gfield_error input,
.gfield_error textarea {
  border-color: #d23059
}

.validation_message {
  display: none;
}

/* ==========================================================================
  Buttons
   ========================================================================== */

.button,
input.button {
  border-radius: 24px;
  padding: 11px 60px;
  color: #FFF;
  font-size: 14px;
  font-weight: bold;
  display: inline-block;
  margin-bottom: 12px;
  text-transform: uppercase;
  letter-spacing: 0.15em;
  width: auto;
}

.button.fluid {
  width: 100%;
  padding-left: 0;
  padding-right: 0;
  text-align: center;
}

.button.green {
  background: #109eae;
  background: -webkit-linear-gradient(75deg, #109eae 0%, #04dec4 100%);
  background: linear-gradient(75deg, #109eae 0%, #04dec4 100%);
}

.button.green.glow {
  box-shadow: 0px 0px 8px 4px rgba(0, 217, 186, 0.75) inset;
}

.button.red {
  background: #d23059;
  -webkit-linear-gradient(15deg, #d23059 0%, #ff1745 100%);
  background: linear-gradient(15deg, #d23059 0%, #ff1745 100%);
}

.button.red.glow {
  box-shadow: 0px 0px 8px 4px rgba(254, 77, 112, 0.75) inset;
}

.button.navy {
  border-color: #2f3f9e;
  background: #1a237d;
  -webkit-linear-gradient(75deg, #1a237d 0%, #2f3f9e 100%);
  background: linear-gradient(75deg, #1a237d 0%, #2f3f9e 100%);
}

.button.navy.outline {
  border-color: #2f3f9e;
  color: #2f3f9e;
}

.button.white {
  border-color: #FFF;
  background: #FFF;
}

.button.white.outline {
  border-color: #FFF;
  color: #FFF;
}

.button.grey {
  background: #a4a4a8;
}

.button.blue {
  background: #2f3f9e;
}

.button.hybrid {
  background: #0569a9;
  -webkit-linear-gradient(90deg, #0584af 0%, #04b0b9 100%);
  background: linear-gradient(90deg, #0584af 0%, #04b0b9 100%);
}

.button.onpremises {
  background: #924f73;
  -webkit-linear-gradient(90deg, #924f73 0%, #e1647b 100%);
  background: linear-gradient(90deg, #924f73 0%, #e1647b 100%);
}

.button.outline {
  border: 2px solid transparent;
  background: transparent;
}

.button.outline.blue {
  border-color: #2f3f9e;
  color: #2f3f9e;
}

.button.outline.grey {
  border-color: #5a5a68;
  color: #5a5a68;
}

.button.small {
  height: 26px;
  border-radius: 18px;
  line-height: 26px;
  padding: 0 16px;
  text-transform: none;
  font-size: 11px;
  letter-spacing: 0.025em;
}

.button.small:before {
  font-size: 12px;
  margin-right: 6px;
}

.button.medium {
  border-radius: 15px;
  padding-top: 4px;
  padding-bottom: 4px;
  min-width: 205px;
  font-size: 12px;
}

.button.animated {
  -moz-animation: bgtween 2s 1 linear;
  -o-animation: bgtween 2s 1 linear;
  -webkit-animation: bgtween 2s 1 linear;
  animation: bgtween 2s 1 linear;
}

.button.animated:hover {
  background: -webkit-linear-gradient(40deg, #109eae 0%, #04dec4 100%);
  background: linear-gradient(40deg, #109eae 0%, #04dec4 100%);
  border: 0;
  -moz-animation-play-state: running;
  -o-animation-play-state: running;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  line-height: 48px;
}


/* ==========================================================================
  Structure
   ========================================================================== */
html,
body {
  height: 100%;
}

.container {
  max-width: 1300px;
  padding: 0 32px;
  margin: auto;
  position: relative;
}

/* ==========================================================================
  Header
   ========================================================================== */
.header {
  background: rgba(0, 0, 24, 0.85);
  color: #FFF;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  line-height: 60px;
  height: 60px;
  text-transform: uppercase;
  letter-spacing: 0.175em;
  font-weight: bold;
  text-align: right;
  z-index: 4;
}

.header .container {
  height: 100%;
}

.logo {
  position: absolute;
  height: 28px;
  top: 18px;
  left: 26px;
  margin: auto;
  display: inline-block;
}

.logo img {
  width: auto;
  height: 100%;
  display: block;
}

.header-github {
  width: 28px;
  height: 28px;
  color: #ff1745;
  background: #FFF;
  border-radius: 50%;
  position: absolute;
  left: 122px;
  top: 0;
  bottom: 0;
  margin: auto;
  z-index: 1;
}

.header-github:before,
.header-github:after {
  left: 0;
  position: absolute;
}

.header-github:before {
  width: 26px;
  height: 26px;
  line-height: 1;
  top: -2px;
  font-size: 32px;
}

.header-github:after {
  content: '';
  border: 1px solid #ff1745;
  top: 0;
  width: 28px;
  height: 28px;
  border-radius: 50%;
}

.menu>ul {
  display: inline-block;
  position: relative;
  text-align: center;
}

.menu li {
  padding: 0 14px;
  display: inline-block;
  list-style-type: none;
  position: relative;
}

.menu a {
  display: block;
}

.menu .menu-underline {
  background: #00d9ba;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 0;
  pointer-events: none;
}

.burger,
.submenu .submenu-back {
  display: none;
}

.submenu {
  visibility: hidden;
  height: 0;
  opacity: 0;
  position: absolute;
  top: 60px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  line-height: 50px;
}

.submenu li {
  background: rgba(0, 0, 24, 0.85);
  display: block;
  margin-top: 1px;
  padding: 0 26px;
  white-space: nowrap;
  opacity: 0;
  visibility: hidden;
}

.submenu li:hover,
.submenu li.active {
  background: rgba(0, 217, 186, 0.85);
}

.menu-getstarted {
  position: relative;
  background: #d23059;
  -webkit-linear-gradient(15deg, #d23059 0%, #ff1745 100%);
  background: linear-gradient(15deg, #d23059 0%, #ff1745 100%);
  padding: 0 40px;
  border-radius: 15px;
  margin: auto auto auto 14px;
  overflow: hidden;
}

.menu-getstarted,
.menu-getstarted:after {
  line-height: 30px;
  height: 30px;
  text-transform: uppercase;
  display: inline-block;
  letter-spacing: 0.1em;
}
/* ... */

